Bug 1933653 - [devtools] Fix shape editor active point text in High Contrast Mode. r=devtools-reviewers,jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D230368

UltraBlame original commit: 15f90d6238fdd966e03198703c25f85b5616592f

--- a/devtools/client/themes/inspector-swatches.css
+++ b/devtools/client/themes/inspector-swatches.css
@@ -37,6 +37,10 @@
   stroke: var(--theme-icon-color);
   /* Prevent line break when copy/pasting an entire rule */
   user-select: auto;
+
+  &:hover {
+    stroke: var(--theme-icon-alternate-hover-color);
+  }
 }
 
 :is(
@@ -44,7 +48,8 @@
   .inspector-grid,
   .inspector-shapeswatch
 )[aria-pressed="true"] {
-  stroke: var(--theme-icon-checked-color);
+  background-color: var(--theme-toolbarbutton-checked-background);
+  stroke: var(--theme-toolbarbutton-checked-color);
 }
 
 .inspector-flex {
@@ -73,6 +78,7 @@
 .inspector-shape-point.active,
 .inspector-shapeswatch[aria-pressed="true"] + .inspector-shape > .inspector-shape-point:hover {
   background-color: var(--inspector-highlight-background-color);
+  color: var(--inspector-highlight-color);
   /* Add an outline so when the property is highlighted because of search,
      the active point still stands out */
   outline: 1px solid var(--theme-contrast-border);
